-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
In ll_atomic_open() and ll_lookup_nd() if the file is a FIFO then we drop a reference on the request pointed to by it_data but we do not clear DISP_ENQ_OPEN_REF leading to a double free/reference drop of the request in ll_intent_release(). These cases are unreachable in practice because of OBD_CONNECT_NODEVOH.