LU-7402 llite: correct request handling after ll_lookup_it()

In the FIFO cases of ll_atomic_open() and ll_lookup_nd() remove
spurious calls to ptlrpc_req_finished(). Explain that these cases are
unreachable in practice anyway.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ic7d677674ed7f9e52d039bb81259f60bc75ba71b
Reviewed-on: http://review.whamcloud.com/17068
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>